[package]
name = "poly_eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rand_core = { version = "0.5", default-features = false }
rand = "0.7.3"
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "serde", "zeroize"] }
subtle = { version = "2.4", default-features = false }
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
zeroize = { version = "1", default-features = false }
digest = "0.8.1"
sha3 = "0.8.2"
merlin = "3.0.0"
thiserror = "1.0"
lazy_static = "1.4.0"
num-bigint = "0.4"
bincode = "1.3.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-test = "0.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[lib]
path = "src/lib.rs"

[[bench]]
name = "poly_eval_bench"
harness = false


[target.aarch64-apple-darwin]
rustflags = ["-C", "target-cpu=native"]

#[build]
#target = "aarch64-apple-darwin"